@@ -260,7 +260,9 @@ private:
 	// We can't have non-delayed assignments with same value on LHS and RHS
 	// as we don't figure out variable ordering.
 	// Delayed is OK though, as we'll decode the next state separately.
-	if (!nodep->varp()->dtypeSkipRefp()->castBasicDType()) clearOptimizable(nodep,"Array references/not basic");
+	if (!nodep->varp()->dtypeSkipRefp()->castBasicDType()
+            && !nodep->varp()->dtypeSkipRefp()->castPackArrayDType())
+            clearOptimizable(nodep,"Array references/not basic");
 	if (nodep->lvalue()) {
 	    if (m_inDlyAssign) {
 		if (!(vscp->user1() & VU_LVDLY)) {
@@ -450,7 +452,7 @@ private:
 	    if (!m_params) { clearOptimizable(nodep, "LHS has select"); return; }
 	    checkNodeInfo(selp);
 	    AstVarRef* varrefp = selp->fromp()->castVarRef();
-	    if (!varrefp) { 
+	    if (!varrefp) {
 		clearOptimizable(nodep, "Select LHS isn't simple variable");
 		return;
 	    }
