@@ -25,6 +25,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix coverage documentation, bug954. [Thomas J Whatson]
 
+****  Fix parameters with function parameter arguments, bug952. [Jie Xu]
+
 
 * Verilator 3.874 2015-06-06
 
